2005-03-28 Jacqueline Pitter <jacqueline.pitter@hp.com>
	* printer/HP-LaserJet_1010.xml,
	  printer/HP-LaserJet_1012.xml,
	  printer/HP-Color_LaserJet_3500.xml,
	  printer/HP-Color_LaserJet_3550.xml: updated level of support with hpijs 0.9 release which adds FastRaster support.

2005-03-28  Hidenori ISHII <hidenori.ishii@avasys.jp>
 
        * opt/2.xml: add constraint of eplaser and eplaser-jp.
 
        * printer/Epson-LP-2500.xml: fix wrong printer model.

	* printer/Epson-EPL-5900.xml: change driver from pxlmono to eplaser.
 
2005-03-24  Hidenori ISHII <hidenori.ishii@avasys.jp>

	* opt/2.xml: change eplaser and eplaser-jp support paper size.

	* driver/eplaser.xml,
	  driver/eplaser-jp.xml,
	  opt/eplaser-InputSlot.xml,
	  printer/Epson-AcuLaser_C1000.xml,
	  printer/Epson-AcuLaser_C900.xml:
	eplaser and eplaser-jp default value change.

2005-03-21  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/NRG-10515_10518_10512_PS.xml,
	  printer/NRG-2205_2238_2212_PS.xml,
	  printer/NRG-2705_2738_2712_PS.xml,
	  printer/NRG-3205_3238_3212_PS.xml,
	  printer/NRG-3525_3508_3502_PS.xml,
	  printer/NRG-4525_4508_4502_PS.xml,
	  printer/NRG-6002_6005_6008_PS.xml,
	  printer/NRG-7502_7505_7508_PS.xml,
	  printer/NRG-9005_9008_9002_PS.xml, printer/NRG-C7010_PS.xml,
	  printer/NRG-C7425dn_PS.xml, printer/NRG-C7425hdn_PS.xml,
	  printer/NRG-DSc224_PS.xml, printer/NRG-DSc232_PS.xml,
	  printer/NRG-DSc38_PS.xml, printer/NRG-DSm615_PS.xml,
	  printer/NRG-DSm618d_PS.xml, printer/NRG-DSm618_PS.xml,
	  printer/NRG-DSm651_PS.xml, printer/NRG-DSm660_PS.xml,
	  printer/NRG-DSm675_PS.xml, printer/NRG-P7026N_PS.xml,
	  printer/NRG-P7026_PS.xml, printer/NRG-P7032_PS.xml,
	  printer/NRG-P7126N_PS.xml, printer/NRG-P7126_PS.xml,
	  printer/NRG-P7145_PS.xml, printer/Ricoh-Aficio_1022_PS.xml:
	  Updated manufacturer URL.

2005-03-09  Jacqueline Pitter <jacqueline.pitter@hp.com>

	* printer/: Added HP-DeskJet_9800.xml

2005-03-09  Tim Waugh <twaugh@redhat.com>
