@@ -543,6 +543,9 @@
    <id>printer/Lexmark-Optra_Eplus</id><!-- Lexmark Optra E+ -->
   </printer>
   <printer>
+   <id>printer/Lexmark-Optra_E321</id>
+  </printer>
+  <printer>
    <id>printer/Minolta-PagePro_6</id><!-- Minolta PagePro 6 -->
   </printer>
   <printer>
