@@ -16,7 +16,17 @@
   </arg_execution>
   <constraints>
      <constraint sense="true">
+      <make>Generic</make>
+      <driver>Postscript</driver>
+      <arg_defval>ev/904</arg_defval>
+     </constraint>
+     <constraint sense="true">
       <make>HP</make>
+      <driver>Postscript</driver>
+      <arg_defval>ev/904</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>Lexmark</make>
       <driver>Postscript</driver>
       <arg_defval>ev/904</arg_defval>
      </constraint>
