@@ -1,0 +1,40 @@
+<printer id="printer/Lexmark-Optra_E321">
+  <make>Lexmark</make>
+  <model>Optra E321</model>
+  <mechanism>
+    <laser/><!--not "color"-->
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+    <consumables>
+    <!--no comments--><!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>http://www.lexmark.com/</url>
+  <lang>
+    <pcl level="5e" />
+    <pjl/>
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+    <general>
+      <manufacturer>Lexmark International</manufacturer>
+      <model>Lexmark E321</model>
+      <description>Lexmark E321</description>
+      <commandset>PCL 5 Emulation, PostScript Level 3 For Mac Emulation, NPAP, PJL</commandset>
+    </general>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>hpijs</driver>
+  <comments>
+    <en>
+
+    20ppm monochrome laser, standard PCL 5e
+
+   </en>
+  </comments>
+</printer>
