@@ -1,4 +1,13 @@
-2005-03-28 Jacqueline Pitter <jacqueline.pitter@hp.com>
+2005-03-30  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/Lexmark-Optra_E321.xml, driver/ljet4.xml,
+	  driver/lj4dith.xml: Added Lexmark Optra E321.
+
+	* opt/161.xml: Activated tray selection with the "Postscript" driver
+	  also for Lexmark and Generic printers.
+
+2005-03-28  Jacqueline Pitter <jacqueline.pitter@hp.com>
+
 	* printer/HP-LaserJet_1010.xml,
 	  printer/HP-LaserJet_1012.xml,
 	  printer/HP-Color_LaserJet_3500.xml,
